layout shift fixed

--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,7 @@
 }
 .hero-main .row{
   height: 100%;
+  --bs-gutter-x: 0 !important
 }
 .hero-main .col-md-4{
   height: fit-content;
